# cerberus

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Cerberus.py  Dockerfile.angelix  Dockerfile.cpr  Dockerfile.fix2fit  Dockerfile.genprog  Dockerfile.prophet  LICENSE  README.md  activate  backup.txt  clear.sh  config.json  configuration.json  deps  deps.sh  driver.py  instrument.sh  requirements.txt  setup.py  test2
app/: main.py  (+14 more)
infra/tools/prophet-0.1-src/prophet-gpl/: .gitignore  DEPS  Genprog_PHP  LICENSE  Makefile.am  TODO  configure.ac
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/: Makefile.am  extra-note  fbc-5251-5252.diff  fbc-5458-5459.diff  fbc-5556-5557.diff  lighttpd-note  lighttpd-repair-temp.conf  php-genprog-f455f8.conf  php-repair-1e91069.conf  php-repair-2adf58.conf  php-repair-2e25ec9.conf  php-repair-3acdca.conf  php-repair-453c954.conf  php-repair-5a8c917.conf  php-repair-8ba00176.conf  php-repair-b84967d.conf  php-repair-ecb9d80.conf  php-src-note  revlog1e91069.txt  revlog2adf58.txt  revlog2e25ec9.txt  revlog3acdca.txt  revlog5a8c917.txt  revlog8ba00176.txt  revlogb84967d.txt  revlogecb9d80.txt  revlogf455f8.txt
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/apache-deps/: Makefile.am
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/fbc-scripts/: Makefile-fbc  configure-fbc  fbc-run-tests.pl
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/gzip-scripts/: Makefile.am  hufts  makefile-clean.py
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/libtiff-deps/: Makefile.am  Makefile.am~
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/libtiff-myscript/: common.sh  smart-diff.py
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/lighttpd-deps/: Makefile.am
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/lighttpd-tests/: 10.t  100.t  101.t  102.t  103.t  104.t  105.t  106.t  107.t  108.t  109.t  11.t  110.t  111.t  112.t  113.t  114.t  115.t  116.t  117.t  118.t  119.t  12.t  120.t  121.t  122.t  123.t  124.t  125.t  127.t  128.t  129.t  13.t  130.t  131.t  132.t  133.t  134.t  136.t  137.t  (+165 more)
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/newinputs/: php-1f49902.phpt  php-2e25ec9.phpt  php-93f65cd.phpt  php-efcb9a71.phpt
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/php-deps/: Makefile.am
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/php-test/: 00026.phpt  00046.phpt  00073.phpt  00076.phpt  00084.phpt  00090.phpt  00092.phpt  00120.phpt  00123.phpt  00128.phpt  00183.phpt  00186.phpt  00201.phpt  00213.phpt  00352.phpt  00379.phpt  00416.phpt  00424.phpt  00427.phpt  00440.phpt  00443.phpt  00453.phpt  00460.phpt  00469.phpt  00489.phpt  00494.phpt  00499.phpt  00502.phpt  00512.phpt  00514.phpt  00524.phpt  00532.phpt  00557.phpt  00565.phpt  00568.phpt  00571.phpt  00575.phpt  00593.phpt  00596.phpt  00603.phpt  (+610 more)
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/svn-deps/: Makefile.am
infra/tools/prophet-0.1-src/prophet-gpl/benchmarks/wireshark-scripts/: mytest.sh
infra/tools/prophet-0.1-src/prophet-gpl/crawler/: c-postprocess.py  crawl-github.py  extract-feature.py  fix-py.py  flist-all.txt  flist-libtiff.txt  flist-php.txt  flist-python.txt  flist-wireshark.txt  getproject_bug.py  getproject_unzip.py  learn.py  learner-helper.py  para-all.out  para-libtiff.out  para-no-mod-all.out  para-no-mod-libtiff.out  para-no-mod-php.out  para-no-mod-python.out  para-no-mod-wireshark.out  para-no-sema-all.out  para-no-sema-libtiff.out  para-no-sema-php.out  para-no-sema-python.out  para-no-sema-wireshark.out  para-php.out  para-rext-wireshark.out  para-ssvm-all.out  para-ssvm-libtiff.out  para-ssvm-php.out  para-ssvm-python.out  para-ssvm-wireshark.out  para-wireshark.out  repo_handler.py  rev-crawler.py  rev-memset.py  rev-tester.py  rev-type.py
infra/tools/prophet-0.1-src/prophet-gpl/crawler/para/: para-no-mod-all.out  para-no-mod-libtiff.out  para-no-mod-php.out  para-no-mod-python.out  para-no-mod-wireshark.out  para-no-sema-all.out  para-no-sema-libtiff.out  para-no-sema-php.out  para-no-sema-python.out  para-no-sema-wireshark.out  para-python.out  para-rext-all.out  para-rext-libtiff.out  para-rext-php.out  para-rext-python.out
infra/tools/prophet-0.1-src/prophet-gpl/doc/: error-revisions.xlsx  feature-dump  feature-graph.xlsx  feature-graph2.xlsx  revision-matchup.xlsx
infra/tools/prophet-0.1-src/prophet-gpl/include/: Makefile.am
infra/tools/prophet-0.1-src/prophet-gpl/src/: ASTDiffer.cpp  ASTDiffer.h  ASTDifferTest.cpp  ASTUtils.cpp  ASTUtils.h  BenchProgram.cpp  BenchProgram.h  CodeRewrite.cpp  CodeRewrite.h  ConfigFile.h  DuplicateDetector.cpp  DuplicateDetector.h  ErrorLocalizer.cpp  ErrorLocalizer.h  ExprSynthesizer.cpp  ExprSynthesizer.h  FeatureExtract.cpp  FeatureParameter.h  FeatureVector.h  GlobalAnalyzer.cpp  GlobalAnalyzer.h  LocalAnalyzer.cpp  LocalAnalyzer.h  Main.cpp  Makefile.am  PlayGround.cpp  ProfileErrorLocalizer.cpp  ProfileErrorLocalizer.h  ProfilerAction.cpp  RepairCandidateGenerator.cpp  RepairCandidateGenerator.h  RepairSearchEngine.cpp  RepairSearchEngine.h  SourceContextManager.cpp  SourceContextManager.h  Utils.cpp  Utils.h  _prophet_profile.cpp  _prophet_profile.h  _test_runtime.cpp  (+2 more)
infra/tools/prophet-0.1-src/prophet-gpl/tests/: Makefile.am  testsuite.at
infra/tools/prophet-0.1-src/prophet-gpl/tools/: apr-build.py  collect_helper.py  curl-build.py  extract-php.py  fbc-build.py  fbc-case-create.py  fbc-rev-test.py  fbc-test.py  fix-compare.py  git-build.py  git_tester.py  gmp-build.py  gmp-case-create.py  gmp-rev-test.py  gmp-test.py  gzip-build.py  gzip-case-create.py  gzip-rev-test.py  gzip-test.py  httpd-build.py  libtiff-build.py  libtiff-case-create.py  libtiff-prepare-test.py  libtiff-rev-test.py  libtiff-rev-test2.py  libtiff-test.py  lighttpd-build.py  lighttpd-case-create.py  lighttpd-rev-test.py  lighttpd-test-copy.py  lighttpd-test.py  lighttpd-tsplit.py  lighttpd-tsplit2.py  lighttpd2785-test.py  multidiff.py  myld.py  note  pclang.py  php-bad-cases.py  php-build.py  (+28 more)
infra/tools/prophet-0.1-src/prophet-gpl/wrap/: Makefile.am
(+5409 files in other folders)
